--- a/css/include.css
+++ b/css/include.css
@@ -1,8 +1,8 @@
 @charset "utf-8";
 body{
 /*    min-height: 1000px;*/
-    height: 100%;
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
     overflow: hidden;
     line-height: 100vh;
     text-align: center;
