--- a/css/media.css
+++ b/css/media.css
@@ -773,7 +773,7 @@
     #section_05 .content_wrap{
     }
     #section_05 .text_wrap{
-        width: 90vw;
+        width: 90W;
         padding-bottom: 24vw;
         border-radius: 3vw;
     }
