--- a/css/include.css
+++ b/css/include.css
@@ -7,7 +7,7 @@ body{
     line-height: 100vh;
     text-align: center;
     position: fixed;
-    bottom: 0;
+    top: 0;
     
     font-family: "NotoSans",sans-serif;
     font-weight: 400;
